--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -39,5 +39,33 @@
         margin: .5rem 0;
       }
     }
+
+    &.previewContent {
+      background: linear-gradient(var(--gray-100), transparent);
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+}
+
+.continueReading {
+  padding: 2rem;
+  margin: 4rem 0 2rem;
+
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-align: center;
+
+  border-radius: 100px;
+  background: var(--gray-850);
+
+  a {
+    cursor: pointer;
+    margin-left: .5rem;
+    color: var(--yellow-500);
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
